src/main/java/com/example/fas/repositories/services/serviceImpl/exceptions/user/invalid/EmailInvalidException.java
package com.example.fas.repositories.services.serviceImpl.exceptions.user.invalid;

public class EmailInvalidException extends RuntimeException {
    public EmailInvalidException(String message) {
        super(message);
    }
}
